<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp"
    tools:context=".SignUpActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_welcome"
        android:textSize="@dimen/_35sp"
        android:textColor="#789868"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="@dimen/_60dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_sign_in_to_continue"
        android:textSize="@dimen/_22sp"
        android:textColor="#375826"
        android:fontFamily="@font/poppins_semibold"
        />
    <EditText
        android:id="@+id/et_username_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:hint="@string/txt_username"
        android:fontFamily="@font/poppins_regular"
        android:inputType="textPersonName"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/et_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:hint="@string/text_email"
        android:fontFamily="@font/poppins_regular"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        />
    <EditText
        android:id="@+id/et_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_password"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="@dimen/_40dp"
        android:inputType="textPassword"
        android:maxLines="1"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#789868"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txt_sign_up"
        android:layout_marginTop="@dimen/_15dp"
        app:cornerRadius="@dimen/_10dp"
        />
    <LinearLayout
        android:id="@+id/ll_already_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_60dp">
        <TextView
            android:id="@+id/tv_already_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_already_a_member"
            android:textSize="@dimen/_16sp"
            android:fontFamily="@font/poppins_medium"
            />
        <TextView
            android:id="@+id/tv_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_sign_in"
            android:textSize="@dimen/_16sp"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginStart="@dimen/_5dp"
            />
    </LinearLayout>
</LinearLayout>