<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp"
    tools:context=".PasswordActivity">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow_left"
        android:backgroundTint="@android:color/transparent"
        />
    <TextView
        android:id="@+id/tv_forgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_forgotten"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#789868"
        android:textSize="@dimen/_35sp"
        android:layout_marginTop="@dimen/_40dp"
        />
    <TextView
        android:id="@+id/tv_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_your_password"
        android:fontFamily="@font/poppins_bold"
        android:textColor="#789868"
        android:textSize="@dimen/_35sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="#375826"
        android:text="@string/txt_enter_your_email"
        android:textSize="@dimen/_18sp"
        android:layout_marginTop="@dimen/_5dp"
        />
    <EditText
        android:id="@+id/et_email_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:hint="@string/text_email"
        android:fontFamily="@font/poppins_regular"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        />
    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_send_email"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_10dp"
        android:backgroundTint="#789868"
        android:layout_marginTop="@dimen/_10dp"
        />
</LinearLayout>